# tanxium

./: .gitignore  Cargo.toml  README.md  deno.jsonc
examples/: base64.ts  code.js  complex-types.ts  crypto.js  faker.js  fetch.ts  hello.js  hello.ts  module.ts  node.js  npm_module.js  prompt.ts  runtime_data.js  test.ts  vanilla.js  zod.ts
examples/modules/: user.js
src/: lib.rs  main.rs  module_loader.rs  tanxium.rs
src/builtins/: mod.rs
src/builtins/crypto/: mod.rs
src/builtins/process/: mod.rs
src/builtins/runtime_object/: mod.rs
src/extensions/: 00_timers.ts
src/exts/: extensions.rs
src/exts/js/: tanxium.js  tanxium.ts  testing.js  testing.ts  types.d.ts
src/globals/: mod.rs
src/globals/base64/: mod.rs
src/globals/crypto/: mod.rs
src/globals/performance/: mod.rs
src/globals/runtime_object/: mod.rs
src/runtime/: event_loop.rs  jobs_queue.rs  mod.rs  module_loader.rs
src/typescript/: mod.rs
src/utils/: typescript.rs
