[package]
name = "tanxium"
description = "Standalone JavaScript/TypeScript runtime for Yasumu"
version = "0.1.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/yasumu-org/tanxium"

[dependencies]
deno_ast = { version = "0.42.0", features = ["transpiling", "typescript"] }
futures-util = "0.3.30"
smol = "2.0.2"
reqwest = { version = "0.12.7", features = ["blocking"] }
deno_core = "0.311.0"
deno_runtime = "0.180.0"
tokio = { version = "1.36.0", features = ["full"] }
