[package]
name = "tanxium"
description = "Embeddable JavaScript/TypeScript runtime for Yasumu powered by Deno"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/yasumu-org/tanxium"

[dependencies]
deno_ast = { version = "0.42.0", features = ["transpiling", "typescript"] }
reqwest = { version = "0.12.7" }
deno_core = "0.311.0"
deno_runtime = "0.180.0"
tokio = { version = "1.36.0", features = ["full"] }
deno_graph = "0.83.3"
deno_semver = "0.5.14"
node_resolver = "0.10.0"
md5 = "0.7.0"
nanoid = "0.4.0"
ulid = "1.1.3"

[build-dependencies]
deno_core = "0.311.0"
