[package]
name = "tanxium"
description = "Embeddable JavaScript/TypeScript runtime for Yasumu powered by Deno"
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/yasumu-org/tanxium"

[dependencies]
deno_ast = { version = "0.42.2", features = ["transpiling", "typescript"] }
reqwest = { version = "0.12.7" }
tokio = { version = "1.36.0", features = ["full"] }
deno_graph = "0.83.4"
deno_semver = "0.5.16"
node_resolver = "0.13.0"
md5 = "0.7.0"
nanoid = "0.4.0"
ulid = "1.1.3"
deno_runtime = "0.183.0"
deno_core = "0.314.2"

[build-dependencies]
deno_core = "0.311.0"
